--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "homepage": "https://github.com/olenakol/goit-js-hw-11.github.io",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url "
+    "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/olenakol/goit-js-hw-11.github.io.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
-  "author": "Olena Kolibanych <olena.kolibanuch@gmail.com>",
+  "author": "Olena Kolibanuch <olena.kolibanych@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/olenakol/goit-js-hw-11.github.io/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
