--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://olenakol.github.io/goit-js-hw-11",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/",
+    "build": "parcel build src/*.html --public-url ../goit-js-hw-11/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
